# mcdft

./: CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  POSCAR_AsP_seg  README.md  TODO.md  calculators.py  mcdft.py  pyproject.toml  setup.py  sro.py  structure_generator.py  test_run.py
app/: CMakeLists.txt  mcdft-structure_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst
include/mcdft-structure/: mcdft-structure.hpp
mcdft/: cluster_expansion.py  dd_mcdft.py  file_io.py  model_test.py  model_train.py  prediction_algorithm.py  test_model.py  train_model.py
python/mcdft/: __init__.py  structure_generator.py
python/mcdftstructure/: _mcdft-structure.cpp
src/: CMakeLists.txt  mcdft-structure.cpp
tests/: CMakeLists.txt  mcdft-structure_t.cpp
tests/python/: test_python_bindings.py
